# chuk-mcp-client-oauth

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
examples/: README.md  authenticated_requests.py  basic_mcp_oauth.py  oauth_cli.py  oauth_handler_example.py  token_storage_example.py
src/chuk_mcp_client_oauth/: __init__.py  cli.py  mcp_oauth.py  oauth_config.py  oauth_flow.py  oauth_handler.py  secure_token_store.py  sse.py  token_manager.py  token_registry.py  token_store_factory.py  token_types.py
src/chuk_mcp_client_oauth/stores/: __init__.py  encrypted_file_store.py  keychain_store.py  linux_store.py  vault_store.py  windows_store.py
tests/: test_cli.py  test_sse.py
tests/auth/: test_mcp_oauth.py  test_oauth_config.py  test_oauth_flow.py  test_oauth_handler.py  test_secure_token_store.py  test_token_manager.py  test_token_registry.py  test_token_store_factory.py  test_token_types.py
tests/auth/stores/: test_encrypted_file_store.py  test_keychain_store.py  test_linux_store.py  test_vault_store.py  test_windows_store.py
